--- a/blocks/element/__content/element__content.css
+++ b/blocks/element/__content/element__content.css
@@ -1,7 +1,7 @@
 .element__content {
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
-  padding: 20px 0 31px 21px;
+  padding: 24px 19px 26px 19px;
   display: flex;
   justify-content: space-between;
   max-width: 246px;
