--- a/blocks/element/__icon/element__icon.css
+++ b/blocks/element/__icon/element__icon.css
@@ -1,11 +1,12 @@
 .element__icon {
   margin: 0;
   padding: 0;
-  background-color: #fff;
+  padding-top: 5px;
+  background: none;
   border: none;
   cursor: pointer;
 }
 
 .element__icon:hover {
-  opacity: 0.6;
+  opacity: 0.5;
 }
