--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,13 +1,13 @@
-.haeder {
+.header {
   margin: 0 auto;
   padding: 0;
   padding-top: 45px;
-  border-bottom: 1px solid #545454;
+  border-bottom: 1px solid rgba(84, 84, 84, 0.7);
   padding-bottom: 39px;
 }
 
 @media screen and (max-width: 899px) {
-  .haeder {
+  .header {
     padding-top: 35px;
     padding-left: 20px;
     padding-right: 20px;
@@ -15,8 +15,8 @@
 }
 
 @media screen and (max-width: 334px) {
-  .haeder {
-    padding: 28px 0 31px 26px;
+  .header {
+    padding: 28px 0 27px 27px;
     max-width: 320px;
   }
 }
