--- a/blocks/popup/__body/popup__body.css
+++ b/blocks/popup/__body/popup__body.css
@@ -1,19 +1,20 @@
 .popup__body {
   margin: auto;
+  display: flex;
+  flex-direction: column;
   max-width: 430px;
-  min-height: 330px;
   border-radius: 10px;
   background-color: #fff;
   color: #000;
-  text-align: center;
-  padding: 34px 36px 37px 36px;
-  position: relative;
+  position: absolute;
+  top: 27%;
+  left: 33%;
 }
 
 @media screen and (max-width: 620px) {
   .popup__body {
-    max-width: 238px;
-    min-height: 322px;
-    padding: 25px 22px;
+    max-width: 282px;
+    top: 22%;
+    left: 6%;
   }
 }
