--- a/blocks/popup/__text/popup__text.css
+++ b/blocks/popup/__text/popup__text.css
@@ -1,6 +1,12 @@
 .popup__text {
   margin: 0;
-  padding-bottom: 24px;
+  padding: 0;
+  max-width: 430px;
+  margin-right: 87px;
+  padding-bottom: 48px;
+  padding-left: 36px;
+  padding-right: 0px;
+  padding-top: 34px;
   font-weight: 900;
   font-size: 24px;
   line-height: 29px;
@@ -9,8 +15,12 @@
 
 @media screen and (max-width: 620px) {
   .popup__text {
-    padding-bottom: 45px;
+    max-width: 282px;
+    padding-left: 22px;
+    padding-top: 25px;
+    padding-bottom: 71px;
+    margin-right: 30px;
     font-size: 18px;
-    line-height: 22px;
+    line-height: 20px;
   }
 }
