--- a/blocks/profile/__btn/profile__btn.css
+++ b/blocks/profile/__btn/profile__btn.css
@@ -1,11 +1,15 @@
 .profile__btn {
   margin: 0;
-  padding: 0 70px 0 70px;
-  background-color: #000;
-  border: 1px solid #fff;
+  padding: 0 73px 0 73px;
+  background: none;
+  background: url(../../../images/Vector-plus.svg) center no-repeat;
+  align-items: center;
+  justify-content: center;
+  border: 2px solid #fff;
   max-width: 150px;
   min-height: 50px;
   cursor: pointer;
+  border-radius: 2px;
 }
 
 .profile__btn:hover {
