--- a/blocks/profile/__image/profile__image.css
+++ b/blocks/profile/__image/profile__image.css
@@ -1,12 +1,13 @@
 .profile__image {
+  display: block;
   border-radius: 50%;
   margin-right: 30px;
+  width: 120px;
+  height: 120px;
 }
 
 @media screen and (max-width: 620px) {
   .profile__image {
     margin: 0 auto;
-    display: block;
-    max-width: 282px;
   }
 }
