--- a/pages/index.css
+++ b/pages/index.css
@@ -8,21 +8,18 @@
 
 @import url(../blocks/section/section.css);
 
-@import url(../blocks/haeder/haeder.css);
+@import url(../blocks/header/header.css);
 
 @import url(../blocks/logo/logo.css);
 
 @import url(../blocks/profile/profile.css);
 @import url(../blocks/profile/__user/profile__user.css);
 @import url(../blocks/profile/__image/profile__image.css);
-@import url(../blocks/profile/__btn-icon/profile__btn-icon.css);
 @import url(../blocks/profile/__btn-editing/profile__btn-editing.css);
 @import url(../blocks/profile/__btn/profile__btn.css);
-@import url(../blocks/profile/__btn-foto/profile__btn-foto.css);
 @import url(../blocks/profile/__title/profile__title.css);
 @import url(../blocks/profile/__subtitle/profile__subtitle.css);
 @import url(../blocks/profile/__wrapper/profile__wrapper.css);
-@import url(../blocks/profile/__button/profile__button.css);
 
 @import url(../blocks/element/element.css);
 @import url(../blocks/element/__card/element__card.css);
@@ -37,11 +34,10 @@
 @import url(../blocks/footer/__copyright/footer__copyright.css);
 
 @import url(../blocks/popup/popup.css);
-@import url(../blocks/popup/__active/popup__active.css);
 @import url(../blocks/popup/__body/popup__body.css);
 @import url(../blocks/popup/__close/popup__close.css);
-@import url(../blocks/popup/__container/popup__container.css);
 @import url(../blocks/popup/__save/popup__save.css);
 @import url(../blocks/popup/__text/popup__text.css);
-@import url(../blocks/popup/__text-job/popup__text-job.css);
-@import url(../blocks/popup/__text-user/popup__text-user.css);
+@import url(../blocks/popup/__input/popup__input.css);
+@import url(../blocks/popup/__text-btn/popup__text-btn.css);
+@import url(../blocks/popup/_active/popup_active.css);
