--- a/blocks/profile/__btn/profile__btn.css
+++ b/blocks/profile/__btn/profile__btn.css
@@ -1,8 +1,7 @@
 .profile__btn {
   margin: 0;
   padding: 0 73px 0 73px;
-  background: none;
-  background-image: url(../../../images/Vector-plus.svg) center no-repeat;
+  background: url(../../../images/Vector-plus.svg) center no-repeat;
   align-items: center;
   justify-content: center;
   border: 2px solid #fff;
