--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -9,8 +9,8 @@
   padding-top: 20px;
   padding-bottom: 20px;
   position: absolute;
-  top: 21%;
-  right: 30%;
+  top: -45px;
+  right: -44px;
 }
 
 .popup__close:hover {
@@ -19,8 +19,8 @@
 
 @media screen and (max-width: 620px) {
   .popup__close {
-    top: 15%;
-    right: 6%;
+    top: -39px;
+    right: 0;
     max-width: 20px;
     min-height: 20px;
     width: 100%;
