--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -4,6 +4,7 @@
   border-radius: 10px;
   background-color: #fff;
   color: #000;
+  position: relative;
 }
 
 @media screen and (max-width: 620px) {
