--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,5 +1,5 @@
 .popup {
-  display: none;
+  display: flex;
   width: 100%;
   height: 100%;
   position: fixed;
@@ -9,4 +9,7 @@
   z-index: 2;
   justify-content: center;
   align-items: center;
+  visibility: hidden;
+  opacity: 0;
+  transition: all 0.5s ease 0s;
 }
