--- a/pages/index.css
+++ b/pages/index.css
@@ -28,7 +28,10 @@
 @import url(../blocks/elements/elements.css);
 @import url(../blocks/element/__btn-icon/element__btn-icon.css);
 @import url(../blocks/element/__icon/element__icon.css);
+@import url(../blocks/element/_active/element_active.css);
 @import url(../blocks/element/__content/element__content.css);
+@import url(../blocks/element/__delete/element__delete.css);
+@import url(../blocks/element/__btn-delete/element__btn-delete.css);
 
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
@@ -39,5 +42,12 @@
 @import url(../blocks/popup/__save/popup__save.css);
 @import url(../blocks/popup/__text/popup__text.css);
 @import url(../blocks/popup/__input/popup__input.css);
-@import url(../blocks/popup/__text-btn/popup__text-btn.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
+
+@import url(../blocks/popup/__text/_text_image/popup__text_image.css);
+
+@import url(../blocks/popup/__container/_big/popup__container_big.css);
+
+@import url(../blocks/popup/_big/popup-img_big.css);
+@import url(../blocks/popup/popup-title/popup-title.css);
+@import url(../blocks/popup/popup_big.css);
