--- a/src/blocks/popup/__text/popup__text.css
+++ b/src/blocks/popup/__text/popup__text.css
@@ -1,7 +1,7 @@
 .popup__text {
   margin: 0;
   padding: 0;
-  max-width: 430px;
+  width: 358px;
   margin-right: 87px;
   padding-bottom: 48px;
   padding-left: 36px;
