--- a/src/blocks/profile/__avatar-wrapper/profile__avatar-wrapper.css
+++ b/src/blocks/profile/__avatar-wrapper/profile__avatar-wrapper.css
@@ -34,3 +34,9 @@
 .profile__avatar-wrapper:hover .profile__avatar-pen {
   opacity: 1;
 }
+
+@media screen and (max-width: 620px) {
+  .profile__avatar-wrapper {
+    margin: 0 auto;
+  }
+}
