--- a/src/blocks/profile/__image/profile__image.css
+++ b/src/blocks/profile/__image/profile__image.css
@@ -1,9 +1,12 @@
 .profile__image {
-  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
   border-radius: 50%;
-  margin-right: 30px;
   width: 120px;
   height: 120px;
+  object-fit: cover;
+  z-index: -1;
 }
 
 @media screen and (max-width: 620px) {
